--- a/.github/workflows/check_football_slots.yml
+++ b/.github/workflows/check_football_slots.yml
@@ -23,14 +23,21 @@ jobs:
 
     - name: Setup Firefox
       uses: browser-actions/setup-firefox@latest
+      with:
+        firefox-version: '129.0'
 
     - name: Setup GeckoDriver
       uses: browser-actions/setup-geckodriver@latest
+      with:
+        geckodriver-version: '0.35.0'
 
     - name: Display Firefox and GeckoDriver versions
       run: |
         firefox --version
         geckodriver --version
+
+    - name: Set GeckoDriver path
+      run: echo "GECKODRIVER_PATH=$(which geckodriver)" >> $GITHUB_ENV
 
     - name: Run availability checker
       env:
