--- a/.github/workflows/check_football_slots.yml
+++ b/.github/workflows/check_football_slots.yml
@@ -24,12 +24,10 @@ jobs:
     - name: Setup Firefox
       uses: browser-actions/setup-firefox@latest
       with:
-        firefox-version: '129.0'
+        firefox-version: 'latest'
 
     - name: Setup GeckoDriver
       uses: browser-actions/setup-geckodriver@latest
-      with:
-        geckodriver-version: '0.35.0'
 
     - name: Display Firefox and GeckoDriver versions
       run: |
